--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  9    <meta property="og:image:type" content="image/jpg">
 10    <meta property="og:image:width" content="1280">
 11    <meta property="og:image:height" content="720">
-12    <meta property="og:video:url" content="https://www.amazon.com/">
+12    <meta property="og:video:url" content="https://youtu.be/hfUR9zk_lyE">
 13    <meta property="og:video:type" content="text/html">
 14    <meta property="og:video:width" content="1280">
 15    <meta property="og:video:height" content="720">
