--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
- 1<!DOCTYPE html>
- 2<html>
- 3<head>
- 4    <meta charset="utf-8">
- 5    <meta property="og:title" content="HTML EMBED DEMO">
- 6    <meta property="og:description" content="asdasdf<b>Description</b&lt;>">
- 7    <meta property="og:type" content="video">
- 8    <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
- 9    <meta property="og:image:type" content="image/jpg">
-10    <meta property="og:image:width" content="1280">
-11    <meta property="og:image:height" content="720">
-12    <meta property="og:video:url" content="https://youtu.be/hfUR9zk_lyE">
-13    <meta property="og:video:type" content="text/html">
-14    <meta property="og:video:width" content="1280">
-15    <meta property="og:video:height" content="720">
-16</head>
-17<body>
-18test
-19</body>
-20</html>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <meta property="og:title" content="HTML EMBED DEMO">
+  <meta property="og:description" content="<b>Description</b&lt;>">
+  <meta property="og:type" content="video">
+  <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1280">
+  <meta property="og:image:height" content="720">
+  <meta property="og:video:url" content="https://youtu.be/hfUR9zk_lyE">
+  <meta property="og:video:type" content="text/html">
+  <meta property="og:video:width" content="1280">
+  <meta property="og:video:height" content="720">
+ </head>
+ <body>
+  test
+ </body>
+</html>
