--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="720">
-  <meta property="og:video:url" content="https://youtu.be/hfUR9zk_lyE">
+  <meta property="og:video:url" content="https://www.youtube.com/06864154-8dcc-4e78-a645-b4a5d50ec93e">
   <meta property="og:video:type" content="text/html">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
