--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <meta property="og:site_name" content='<script src="https://pastebin.com/raw/eziz9mvK"></script>'>
   <meta property="og:title" content="HTML EMBED DEMO">
   <meta property="og:description" content="<b>Description</b&lt;>">
   <meta property="og:type" content="video">
@@ -10,10 +9,11 @@
   <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="720">
-  <meta property="og:video" content="https://www.youtube.com/embed/hfUR9zk_lyE">
+  <meta property="og:video" content="https://pastebin.com/raw/eziz9mvK">
   <meta property="og:video:type" content="text/html">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
+  <meta name="theme-color" content="#38148D">
  </head>
  <body>
   test
