--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
  <head>
   <meta charset="utf-8">
   <meta property="og:title" content="HTML EMBED DEMO">
-  <meta property="og:description" content="<b>Description</b&lt;>">
+  <meta property="og:description" content="<b>Simple</b>">
   <meta property="og:type" content="video">
   <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
-  <meta property="og:image:type" content="image/jpg">
-  <meta property="og:image:width" content="1280">
-  <meta property="og:image:height" content="720">
-  <meta property="og:video" content="https://pastebin.com/raw/eziz9mvK">
+  <meta property="og:video" content="https://awebb1.github.io/startpage">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
   <meta name="theme-color" content="#38148D">
