--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="HTML EMBED DEMO">
   <meta property="og:description" content="<b>Simple</b>">
-  <meta property="og:type" content="video">
+  <meta property="og:type" content="video.other">
   <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
   <meta property="og:video" content="https://awebb1.github.io/startpage">
   <meta property="og:video:width" content="1280">
