--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:description" content="<b>Simple</b>">
   <meta property="og:type" content="video.other">
   <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
-  <meta property="og:video" content="https://awebb1.github.io/startpage">
+  <meta property="og:video" content="https://pastebin.com/raw/Vb6ttYNV">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
   <meta name="theme-color" content="#38148D">
