--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta property="og:description" content="<b>Simple</b>">
   <meta property="og:type" content="video.other">
   <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
-  <meta property="og:video" content="https://awebb1.github.io/embedededededededededededed/">
+  <meta property="og:video" content="https://awebb1.github.io/embededededededededededededed/">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
   <meta name="theme-color" content="#38148D">
  </head>
  <body>
-  <video></video>
+  <video controls onplay="alert('gotcha')">
+     <source src="https://www.w3schools.com/jsref/mov_bbb.mp4" type="video/mp4"> 
+  </video>
   test
  </body>
 </html>
