--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta property="og:title" content="HTML EMBED DEMO">
   <meta property="og:description" content="<b>Simple</b>">
-  <meta property="og:type" content="video.other">
+  <meta property="og:type" content="video">
   <meta property="og:image" content="https://images2.alphacoders.com/132/1325157.png">
-  <meta property="og:video" content="https://www.w3schools.com/jsref/mov_bbb.mp4">
+  <meta property="og:video" content="https://awebb1.github.io/embededededededededededededededed">
   <meta property="og:video:width" content="1280">
   <meta property="og:video:height" content="720">
   <meta name="theme-color" content="#38148D">
-  <meta property="og:url" content="https://awebb1.github.io/embedededededededededededededed/"> <!-- Specify the URL of your webpage -->
+  <meta property="og:url" content="https://awebb1.github.io/embededededededededededededededed"> <!-- Specify the URL of your webpage -->
  </head>
  <body>
   <video controls onplay="alert('gotcha')">
